--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
 .DS_Store
 .vscode/
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+*.env
+*.venv
+env/
+venv/
+ENV/
+.Python
+*.sqlite3
+*.log
+*.pyc
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+.cache/
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+
+# Ignore Mac system files
+*.DS_Store
